featrue(add)添加获取简历详情和删除个人简历接口
